# KCC2026_LLM_SIL_BT_GEN

./: .env.example  .gitignore  README.md  pyproject.toml  run_experiment.py
data/few_shot_examples/generic/: npc_guard.xml  smart_thermostat.xml
experiments/configs/: _domains.yaml  default.yaml  llama.yaml
experiments/results/gpt4/: by_domain_raw.csv  by_domain_repaired.csv  by_object_raw.csv  category_coverage.csv  main_table.csv  pairwise_tests.csv  per_behavior.csv  repair_stats.csv  validity_gain.csv  winrate_per_object.csv
experiments/results/llama/: by_domain_raw.csv  by_domain_repaired.csv  by_object_raw.csv  category_coverage.csv  main_table.csv  pairwise_tests.csv  per_behavior.csv  repair_stats.csv  validity_gain.csv  winrate_per_object.csv
scripts/: analyze.py  build_loader.sh  figures.py  stats.py
src/bt_validator/: btcpp_loader.cpp  coverage.py  validator.py
src/generators/: bt_generator.py  llm_client.py
src/prompts/: templates.py
src/utils/: logging.py
tests/: test_bt_generator.py  test_coverage.py  test_validator.py
