[project]
name = "kcc2026-llm-sil-bt-gen"
version = "1.0.0"
description = "LLM-Based Behavior Tree Generation for SITL Environment Objects (KCC 2026)"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.30",
    "py-trees>=2.2",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.11",
    "numpy>=1.24",
    "python-dotenv>=1.0",
    "tiktoken>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"
